Create EntityCreation command builder.
The EntityCreationCommandBuilder builds commands for the different MapEntities creation.